# PiFan

./:  pi_fan_hwpwm.service  .clang-format  .cmake-format.yaml  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  main.cpp
CMake/: GetTriplet.cmake  toolchain-RaspberryPi-arm64.cmake
conan/: aarch64-linux-gnu  x86_64-linux-gnu
src/: CMakeLists.txt
src/Application/: CMakeLists.txt  config.h.in  main.cpp
src/Business/: CMakeLists.txt  CMake_SrcFiles.cmake
src/Business/impl/: TemperatureAdjuster.cpp
src/Business/include/PiFan/Business/: TemperatureAdjuster.h
src/Service/: CMakeLists.txt  CMake_SrcFiles.cmake
src/Service/impl/: CPUTemperature.cpp  PiFanController.cpp
src/Service/include/PiFan/Service/: CPUTemperature.h  PiFanController.h  degree_celsius.h
tests/: CMakeLists.txt
tests/Business/: CMakeLists.txt  TemperatureAdjuster_test.cpp
tests/Service/: CMakeLists.txt  TemperatureFanController_test.cpp
